# delete_otak

./: pyproject.toml
anti_otakmori/: main.py
tests/: test_anti_otakmori.py
