[tool.poetry]
name = "anti-otakmori"
version = "0.1.0"
description = ""
authors = ["Ryu18 <ryu@tpgjbo.xyz>"]

[tool.poetry.dependencies]
python = "^3.6"
py-cord = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
